Completed S3 File Upload Implementation

--- a/src/AwsS3BucketUpload/Views/Documents/Index.cshtml
+++ b/src/AwsS3BucketUpload/Views/Documents/Index.cshtml
@@ -8,7 +8,7 @@
 
 @using (Html.BeginForm("Create", "Documents", FormMethod.Post, new { encType = "multipart/form-data" })) 
 {
-    @Html.AntiForgeryToken()
+    @*@Html.AntiForgeryToken()*@
     
     <div class="form-horizontal">
         <h2>Document</h2>
